--- a/server/index.html
+++ b/server/index.html
@@ -6,14 +6,25 @@
   </head>
     <script src="/socket.io/socket.io.js"></script>
   <body>
-    <header>
+    <!-- <header>
       <p>user/group name</p>
       <p class="status"></p>
-    </header>
-    <ul id="messages"></ul>
+    </header> -->
+    <!-- <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" onchange="handleChange" /><button>Send</button>
+    </form> -->
+
+    <form id="form" action="">
+      <input id="name" type="text" autocomplete="off" onchange="handleChange" />
+      <input id="tel" type="tel" autocomplete="off" onchange="handleChange" />
+      <input id="portada" type="text" autocomplete="off" onchange="handleChange" />
+      <input id="info" type="text" autocomplete="off" onchange="handleChange" />
+     
+
+      <button>Send</button>
     </form>
+
   </body>
   <script src="http://localhost:3000/static/js/chat.js"></script>
 </html>
